# pglite-oxide

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  TOCHECK.md  clippy.toml  committed.toml  deny.toml  prek.toml  release-plz.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check-conventional-commit.sh  check-release-changelog.sh  check-release-intent.sh  download-aot-artifacts.sh
.github/workflows/: assets.yml  ci.yml  conventional-commits.yml  release.yml
assets/: pglite_fs_manifest.json  sources.toml
assets/prepopulated/: pgdata-template.json  pgdata-template.tar.zst
assets/wasix-build/: analyze_pgl_stubs.sh  configure_wasix_dl.sh  docker_pgdump.sh  docker_pglite.sh  docker_pgtrgm.sh  docker_pgvector.sh  docker_runtime_support.sh  pg_config_wasix.sh  prepare_patched_source.sh
assets/wasix-build/docker/: Dockerfile
assets/wasix-build/patches/: postgres-pglite-wasix-dl.patch
assets/wasix-build/wasix_shim/: pglite_wasix_bridge_abi_test.c
crates/aot/aarch64-apple-darwin/: Cargo.toml  README.md
crates/aot/aarch64-apple-darwin/artifacts/: dict_snowball-llvm-opta.bin.zst  manifest.json  pg_dump-llvm-opta.bin.zst  pg_trgm-llvm-opta.bin.zst  plpgsql-llvm-opta.bin.zst  vector-llvm-opta.bin.zst
crates/aot/aarch64-apple-darwin/src/: lib.rs
crates/aot/aarch64-unknown-linux-gnu/: Cargo.toml  README.md
crates/aot/aarch64-unknown-linux-gnu/src/: lib.rs
crates/aot/x86_64-apple-darwin/: Cargo.toml  README.md
crates/aot/x86_64-apple-darwin/src/: lib.rs
crates/aot/x86_64-pc-windows-msvc/: Cargo.toml  README.md
crates/aot/x86_64-pc-windows-msvc/src/: lib.rs
crates/aot/x86_64-unknown-linux-gnu/: Cargo.toml  README.md
crates/aot/x86_64-unknown-linux-gnu/src/: lib.rs
crates/assets/: Cargo.toml  README.md
crates/assets/assets/: manifest.json
crates/assets/assets/extensions/: pg_trgm.tar.zst  vector.tar.zst
crates/assets/assets/prepopulated/: pgdata-template.json  pgdata-template.tar.zst
crates/assets/src/: lib.rs
docs/: ALIGNMENT_DIFF.md  ALIGNMENT_NOTES.md  ASSETS.md  DEVELOPMENT.md  EXTENSIONS.md  PERFORMANCE.md  PG_DUMP.md  PHASE_1_2_COMPLETENESS.md  PRODUCT_PLAN.md  RELEASE.md  RUNTIME.md  RUST_PORT_PLAN.md  TAURI.md  TESTING.md  UPSTREAM_AUDIT.md  USAGE.md  WASIX_DYNAMIC_EXTENSIONS.md  WASIX_WASMER_ROADMAP.md  WASMER_WASIX_LEVERS.md
docs/reviews/: base_vs_base_ts.md  pglite_vs_pglite_ts.md
examples/: build_pgdata_template.rs
examples/tauri-sqlx-vanilla/: README.md  index.html  package-lock.json  package.json
examples/tauri-sqlx-vanilla/src/: main.ts  styles.css
examples/tauri-sqlx-vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-sqlx-vanilla/src-tauri/src/: bench.rs  lib.rs  main.rs
scripts/: check-asset-input-fingerprint.sh  check-crate-size.sh  check-no-legacy-runtime.sh  install-hooks.sh  validate.sh
spikes/wasix-dlopen-proof/: README.md  libdlopened.c  libneeded.c  main.c  run.sh
spikes/wasix-postgres-build/: README.md  analyze_pgl_stubs.sh  build_min_ext.sh  configure_wasix_dl.sh  docker_make.sh  docker_pgdump.sh  docker_pglite.sh  docker_pgtrgm.sh  docker_pgvector.sh  docker_probe.sh  docker_runtime_support.sh  pg_config_wasix.sh  prepare_patched_source.sh  run_min_ext_dlopen.sh
spikes/wasix-postgres-build/fs_probe/: fs_probe.c  sjlj_probe.c
spikes/wasix-postgres-build/min_ext/: dlopen_min_ext.c  min_ext.c
spikes/wasix-postgres-build/patches/: postgres-pglite-wasix-dl.patch
spikes/wasix-postgres-build/wasix_shim/: pglite_wasix_bridge.c  pglite_wasix_shim.c
spikes/wasmer-wasix-eval/: Cargo.toml  README.md
spikes/wasmer-wasix-eval/src/: lib.rs  main.rs
src/: lib.rs
src/pglite/: aot.rs  assets.rs  base.rs  builder.rs  client.rs  errors.rs  extensions.rs  interface.rs  mod.rs  parse.rs  pg_dump.rs  postgres_mod.rs  proxy.rs  server.rs  templating.rs  transport.rs  types.rs
src/protocol/: buffer_reader.rs  buffer_writer.rs  messages.rs  mod.rs  parser.rs  serializer.rs  string_utils.rs  tests.rs  types.rs
tests/: cli_smoke.rs  client_compat.rs  extensions_smoke.rs  performance_smoke.rs  proxy_smoke.rs  runtime_smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
