[package]
name = "pglite-oxide"
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
description = "Rust helpers for embedding the Electric SQL pglite WebAssembly PostgreSQL runtime"
readme = "README.md"
repository = "https://github.com/f0rr0/pglite-oxide"
homepage = "https://github.com/f0rr0/pglite-oxide"
documentation = "https://docs.rs/pglite-oxide"
keywords = ["postgres", "pglite", "wasm", "database", "embedded"]
categories = ["database-implementations", "wasm", "development-tools::testing"]
license = "MIT AND Apache-2.0 AND PostgreSQL"
exclude = [
  ".github/**",
  "Cargo.toml.orig",
  "assets/bin/pg_dump.wasm",
  "assets/extensions/vector.tar.gz",
  "examples/tauri-sqlx-vanilla/**",
  "release-plz.toml",
]

[features]
default = ["runtime-cache"]
runtime-cache = ["wasmtime/cache"]

[package.metadata.pglite-oxide.assets]
postgres-version = "17.5"
postgres-pglite-branch = "REL_17_5-pglite"
pglite-build-repo = "electric-sql/pglite-build"
pglite-build-branch = "gh-pages"
pglite-build-commit = "4c78ee29513799a51d4e1f75008cf9c3f00b11e9"
pglite-npm-version-checked = "0.4.4"
runtime-archive-sha256 = "f6f90bf571c7f5bc925ff22f94233893c2c740466da2ad23bcd4e8e1ea8c498a"
pglite-wasi-sha256 = "ad423e536096ede1870f4802e7dbe4b49599c6e3bafc45aa9a4ddeeae2c5f4f8"
pgdata-template-archive-sha256 = "63e398b3cd4fec134d06539f064018fc2aa7fef75b9c331472f9b2d7385b913d"

[dependencies]
anyhow = "1"
tar = "0.4"
zstd = { version = "0.13", default-features = false }
directories = "6"
wasmtime = { version = "44", default-features = false, features = [
  "cranelift",
  "parallel-compilation",
  "runtime",
] }
wasmtime-wasi = { version = "44", default-features = false, features = ["p1"] }
getrandom = "0.4"
tracing = "0.1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"

[[bin]]
name = "pglite-dump"
path = "src/bin/pglite_dump.rs"

[[bin]]
name = "pglite-proxy"
path = "src/bin/pglite_proxy.rs"

[profile.dev.package.wasmtime-internal-cache]
# Wasmtime's internal cache crate keys debug builds by the current executable
# mtime. That defeats the compiled-module cache after ordinary edit/rebuild
# cycles, so keep this dependency on the stable release-style cache namespace
# during local dev and tests.
debug-assertions = false
