[package]
name = "tauri-sqlx-vanilla"
version = "0.1.0"
description = "Vanilla Tauri v2 SQLx profiler for pglite-oxide"
authors = ["pglite-oxide contributors"]
edition = "2021"
publish = false

[lib]
name = "tauri_sqlx_vanilla_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
pglite-oxide = { path = "../../.." }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
